@@ -1,3 +1,8 @@
+2006-07-21    <tino@firebird.03.softkill.net>
+
+	* setuptino.sh: Thou shalt test thee! sigh .. the checkout process
+	now works as expected.
+
 2006-07-17    <tino@firebird.03.softkill.net>
 
 	* setuptino.sh: add tino/ directory to CVS
